<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_fragment_settings_fab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.FragmentSettings">

    <ScrollView
        android:id="@+id/scroll_view_fragment_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/fab_fragment_settings"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_fragment_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- N songs -->

            <EditText
                android:id="@+id/edit_text_n_songs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:autofillHints="@string/n_songs"
                android:ems="10"
                android:hint="@string/n_songs_desc"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_n_songs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_view_n_songs"
                app:layout_constraintTop_toTopOf="@+id/text_view_n_songs" />

            <EditText
                android:id="@+id/edit_text_percent_change_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:autofillHints="@string/percent_change_up"
                android:ems="10"
                android:hint="@string/percent_change_desc"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_percent_change_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/edit_text_n_songs"
                app:layout_constraintTop_toTopOf="@+id/text_view_percent_change_up" />

            <EditText
                android:id="@+id/edit_text_percent_change_down"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:autofillHints="@string/percent_change_down"
                android:ems="10"
                android:hint="@string/percent_change_desc"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_percent_change_down"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/edit_text_n_songs"
                app:layout_constraintTop_toTopOf="@+id/text_view_percent_change_down" />

            <!-- Percent Change Up -->

            <TextView
                android:id="@+id/text_view_percent_change_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/percent_change_up"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/text_view_percent_change_down"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_n_song_desc" />

            <TextView
                android:id="@+id/text_view_n_songs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/n_songs"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/text_view_n_song_desc"
                app:layout_constraintEnd_toStartOf="@+id/edit_text_n_songs"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Percent Change Down -->

            <TextView
                android:id="@+id/text_view_percent_change_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/percent_change_down"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/text_view_percent_changed_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_percent_change_up" />

            <TextView
                android:id="@+id/text_view_n_song_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/n_songs_desc"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/text_view_percent_change_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_n_songs" />

            <TextView
                android:id="@+id/text_view_percent_changed_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/percent_change_desc"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_percent_change_down" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_fragment_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/large_margin"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorOnPrimary"
        android:textSize="16sp"
        app:iconTint="@color/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view_fragment_settings"
        app:rippleColor="@color/colorPrimaryVariant" />

</androidx.constraintlayout.widget.ConstraintLayout>