...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_songs"
        android:text="@string/songs"
        app:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@id/button_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_playlists" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
...
