...
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/colorOnPrimary"
        />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/controls"
        app:layout_constraintLeft_toLeftOf="parent"
...
