<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_fragment_song"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="playlists.FragmentSong"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_view_song_art_fragment_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:background="@color/colorOnPrimary"
        android:contentDescription="@string/song_art" />

    <LinearLayout
        android:id="@+id/linear_layout_song_name_fragment_song"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_thumb_down"
            android:scaleType="fitXY"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:layout_marginEnd="@dimen/half_margin"
            app:srcCompat="@drawable/thumb_down_alt_black_24dp"
            tools:ignore="NestedWeights"
            android:contentDescription="@string/thumb_down" />

        <TextView
            android:id="@+id/text_view_song_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginEnd="@dimen/half_margin"
            android:layout_weight="3"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"/>

        <ImageButton
            android:id="@+id/button_thumb_up"
            android:scaleType="fitXY"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:layout_marginStart="@dimen/half_margin"
            app:srcCompat="@drawable/thumb_up_alt_black_24dp"
            android:contentDescription="@string/thumb_up" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/seek_bar_fragment_song"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/linear_layout_times_fragment_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/edit_text_current_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/edit_text_end_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="viewEnd" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_buttons_fragment_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/image_button_shuffle"
            android:scaleType="fitXY"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/half_margin"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/ic_shuffle_black_24dp"
            tools:ignore="NestedWeights"
            android:contentDescription="@string/button_shuffle" />

        <ImageButton
            android:id="@+id/image_button_prev"
            android:scaleType="fitXY"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginEnd="@dimen/half_margin"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/skip_previous_black_24dp"
            android:contentDescription="@string/button_prev" />

        <ImageButton
            android:id="@+id/image_button_play_pause"
            android:scaleType="fitXY"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginEnd="@dimen/half_margin"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/pause_black_24dp"
            android:contentDescription="@string/button_play_pause" />

        <ImageButton
            android:id="@+id/image_button_next"
            android:scaleType="fitXY"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginEnd="@dimen/half_margin"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/skip_next_black_24dp"
            android:contentDescription="@string/button_next" />

        <ImageButton
            android:id="@+id/image_button_repeat"
            android:scaleType="fitXY"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/repeat_white_24dp"
            android:contentDescription="@string/button_repeat" />

    </LinearLayout>

</LinearLayout>